--- a/man/pamaltsat.1
+++ b/man/pamaltsat.1
@@ -36,7 +36,7 @@ arguments.  The output is a Netpbm image in the same format written to
 Standard Output.
 .PP
 The most conventional way to change the saturation of an image is what
-\fBppmbrighten\fP does.
+\fBpambrighten\fP does.
   
 
 .UN examples
@@ -56,7 +56,7 @@ To convert a color image to grayscale:
 .nf
 \f(CW
     pamaltsat -strength 0 test.ppm
-</kdb>
+\fP
 .fi
 
 
@@ -202,7 +202,7 @@ described under the \fB-strength\fP command-line option.
 .UN seealso
 .SH SEE ALSO
 .PP
-.BR "ppmbrighten" (1)\c
+.BR "pambrighten" (1)\c
 \&,
 .BR "ppmflash" (1)\c
 \&, 
