--- a/man/pamarith.1
+++ b/man/pamarith.1
@@ -228,7 +228,7 @@ image, use \fBpamfunc\fP.
 \&,
 .BR "\fBpnminvert\fP" (1)\c
 \&,
-.BR "\fBppmbrighten\fP" (1)\c
+.BR "\fBpambrighten\fP" (1)\c
 \&,
 .BR "\fBppmdim\fP" (1)\c
 \&,
