--- a/man/pamdepth.1
+++ b/man/pamdepth.1
@@ -57,7 +57,7 @@ files before April 2000.
 \&,
 .BR "ppmdither" (1)\c
 \&
-.BR "ppmbrighten" (1)\c
+.BR "pambrighten" (1)\c
 \&
 .BR "pamfunc" (1)\c
 \&
