--- a/man/pamfunc.1
+++ b/man/pamfunc.1
@@ -128,7 +128,7 @@ This option makes the transfer function that of multiplying by
 Where the input is a PGM or PPM image, this has the effect of
      dimming or brightening it.  For a different kind of brightening,
      see
-.BR "\fBppmbrighten\fP" (1)\c
+.BR "\fBpambrighten\fP" (1)\c
 \& and
 .BR "\fBppmflash\fP" (1)\c
 \&
@@ -297,7 +297,7 @@ This option was new in Netpbm 10.65 (December 2013).
 .SH SEE ALSO
 .BR "ppmdim" (1)\c
 \&,
-.BR "ppmbrighten" (1)\c
+.BR "pambrighten" (1)\c
 \&,
 .BR "pamdepth" (1)\c
 \&,
