--- a/man/pnmnorm.1
+++ b/man/pnmnorm.1
@@ -299,7 +299,7 @@ Before Netpbm 10.28 (August 2005), there was no \fB-colorvalue\fP option.
 \&,
 .BR "pgmhist" (1)\c
 \&,
-.BR "ppmbrighten" (1)\c
+.BR "pambrighten" (1)\c
 \&,
 .BR "ppmdim" (1)\c
 \&,
