--- a/man/ppmflash.1
+++ b/man/ppmflash.1
@@ -38,16 +38,16 @@ blue to 50%.
 If \fIflashfactor\fP is zero, the output is identical to the input.
 If \fIflashfactor\fP is one, the output is all white.
 .PP
-\fBppmbrighten\fP does a more normal kind of brightening.
+\fBpambrighten\fP does a more normal kind of brightening.
 \fBpamfunc\fP does a very simple brightening.  Both
-\fBppmbrighten\fP and \fBpamfunc\fP can reduce brightness as well.
+\fBpambrighten\fP and \fBpamfunc\fP can reduce brightness as well.
 .PP
 \fBpnmgamma\fP is another way people do a similar brightening, though
 it isn't really intended for that.
 
 .UN lbAE
 .SH SEE ALSO
-.BR "ppmbrighten" (1)\c
+.BR "pambrighten" (1)\c
 \&
 .BR "pamfunc" (1)\c
 \&,
