--- a/man/ppmntsc.1
+++ b/man/ppmntsc.1
@@ -97,7 +97,7 @@ black in place of pixels that are already legal.
 \&,
 .BR "ppmdim" (1)\c
 \&,
-.BR "ppmbrighten" (1)\c
+.BR "pambrighten" (1)\c
 \&,
 .BR "ppm" (5)\c
 \&
